--- a/DocumentCapture/Info.plist
+++ b/DocumentCapture/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Used to scan documents</string>
 </dict>
 </plist>
